--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="robots" content="noindex">
   <meta name="robots" content="nofollow">
   <meta http-equiv="cache-control" content="no-cache">
-  <meta http-equiv="REFRESH" content="10;URL=">
+  <meta http-equiv="REFRESH" content="0;URL=https://casualconnection.life/?u=gyqpd06&o=5pwk290">
 </head>
 
 <body>
@@ -2260,7 +2260,7 @@
     <div class="framer-4lWI1" style="display:contents" bis_skin_checked="1">
       <div class="framer-18xy20f" style="min-height:100%;width:auto" bis_skin_checked="1"><a class="framer-103ea87 framer-j5rtqw" data-border="true" data-framer-name="Footer" name="Footer" href="https://realdatinghere.life/?u=gyqpd06&o=5ppk29b" rel="noopener">
           <div class="framer-1y7eepu" bis_skin_checked="1">
-            <div style="position:absolute;border-radius:inherit;top:0;right:0;bottom:0;left:0" data-framer-background-image-wrapper="true" bis_skin_checked="1"><img src="https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png" alt="" srcset="https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png?scale-down-to=512 288w, https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png?scale-down-to=1024 576w, https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png 720w" sizes="340px" style="display:block;width:100%;height:100%;border-radius:inherit;object-position:center;object-fit:cover;image-rendering:auto">
+            <div style="position:absolute;border-radius:inherit;top:0;right:0;bottom:0;left:0" data-framer-background-image-wrapper="true" bis_skin_checked="1"><img src="https://framerusercontent.com/images/Yf5XnVEATSckrC1uvUterzkE.png" alt="" srcset="https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png?scale-down-to=512 288w, https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png?scale-down-to=1024 576w, https://framerusercontent.com/images/AacQiNK6XxGAFh6FLsiiUpBx0gg.png 720w" sizes="340px" style="display:block;width:100%;height:100%;border-radius:inherit;object-position:center;object-fit:cover;image-rendering:auto">
             </div>
           </div>
           <div class="framer-1vyslkv" bis_skin_checked="1">
