--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="robots" content="noindex">
   <meta name="robots" content="nofollow">
   <meta http-equiv="cache-control" content="no-cache">
-  <meta http-equiv="REFRESH" content="0;URL=https://casualconnection.life/?u=gyqpd06&o=5pwk290">
+  <meta http-equiv="REFRESH" content="0;URL=https://higebg.trsmartoffer.com/c/508fa1cf3e1f1">
 </head>
 
 <body>
