--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div><br>
                         <div class="step__footer">
                             <div class="btnbox">
-                                <a class="btn btn--primary btn-fin btn-Video   btn-fin" href="https://higebg.datedat.com/s/607dc2ce1ada0">
+                                <a class="btn btn--primary btn-fin btn-Video   btn-fin" href="https://higebg.trsmartoffer.com/c/62daeb40c39ba">
                      CONTINUE (18+)                                                                
                         </a>
                             </div>
@@ -89,7 +89,7 @@
     <script type="text/javascript">
         /*<![CDATA[*/
         (function(w) {
-                w.backOfferUrl = 'https://higebg.datedat.com/s/607dc2ce1ada0'
+                w.backOfferUrl = 'https://higebg.trsmartoffer.com/c/62daeb40c39ba'
             }
             (window));
         /*]]>*/
